# inverse_distance_weight

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build_and_test.yml
src/: coord.rs  idw.rs  lib.rs
